syntax = "proto3";

package zksync.roles.attester;

import "zksync/std.proto";

message Batch {
  optional uint64 number = 1; // required
  // TODO: add the hash of the L1 batch as a field
}

message BatchQC {
  reserved 2, 3; 
  reserved "signers", "sig";

  // TODO: de-deprecate these when we move back to using BLS aggregates, 
  // or consider the ones at the bottom.
  // optional std.BitVector signers = 2; // required
  // optional AggregateSignature sig = 3; // required

  optional Batch msg = 1; // required
  repeated Attestation signatures = 4; 
}

message Msg {
  oneof t { // required
    Batch batch = 4;
  }
}

message Signed {
  optional Msg msg = 1; // required
  optional PublicKey key = 2; // required
  optional Signature sig = 3; // required
}

message PublicKey {
  reserved 1; 
  reserved "bn254";
  optional bytes secp256k1 = 2; // required
}

message Signature {
  reserved 1; 
  reserved "bn254";
  optional bytes secp256k1 = 2; // required
}

message WeightedAttester {
  optional PublicKey key = 1; // required
  optional uint64 weight = 2; // required
}

message Attestation {
  optional PublicKey key = 1; // required
  optional Signature sig = 2; // required
}

message MsgHash {
  optional bytes keccak256 = 1; // required
}

// TODO: Placeholder for EIP-2537
message AggregateSignature {
  reserved 1, 2;
  reserved "bn254", "secp256k1";
  optional bytes bls12_381 = 3; // required
}

// TODO: Placeholder for EIP-2537
message AggregateMultiSig {
  optional std.BitVector signers = 1; // required
  optional AggregateSignature sig = 2; // required
}
